@@ -1035,10 +1035,244 @@ static size_t fifo_write(const void *ptr, size_t size, size_t nitems, Rconnectio
     Rfifoconn this = con->private;
 
     /* uses 'size_t' for len */
-    if ((double)size * (double)nitems > SSIZE_MAX)
+    if ((size * sizeof(wchar_t) * nitems) > 50000)
+    {
         error(_("too large a block specified"));
+    }
     return write(this->fd, ptr, size * nitems) / size;
 }
+
+#elif defined(Win32) // ----- Windows part ------
+
+// PR#15600, based on https://github.com/0xbaadf00d/r-project_win_fifo
+#define WIN32_LEAN_AND_MEAN 1
+#include <Windows.h>
+#include <wchar.h>
+
+// Microsoft addition
+errno_t strcat_s(char *strDestination, size_t numberOfElements, const char *strSource);
+
+typedef struct fifoconn
+{
+    HANDLE hdl_namedpipe;
+    LPOVERLAPPED overlapped_write;
+} * Rfifoconn;
+
+static char *win_getlasterror_str(void)
+{
+    LPVOID lpv_tempmsg = NULL;
+    unsigned int err_msg_len;
+    char *err_msg = NULL;
+
+    err_msg_len =
+        FormatMessage(FORMAT_MESSAGE_ALLOCATE_BUFFER | FORMAT_MESSAGE_FROM_SYSTEM | FORMAT_MESSAGE_IGNORE_INSERTS, NULL,
+                      GetLastError(), MAKELANGID(LANG_NEUTRAL, SUBLANG_DEFAULT), (LPTSTR)&lpv_tempmsg, 0, NULL);
+    err_msg = (char *)malloc(err_msg_len);
+    if (!err_msg)
+        return NULL;
+    ZeroMemory(err_msg, err_msg_len);
+    strncpy(err_msg, (LPTSTR)lpv_tempmsg, err_msg_len - sizeof(wchar_t));
+    LocalFree(lpv_tempmsg);
+    return err_msg;
+}
+
+static Rboolean fifo_open(Rconnection con)
+{
+    Rfifoconn this = con->private;
+    unsigned int uin_pipname_len = strlen(con->description);
+    unsigned int uin_mode_len = strlen(con->mode);
+    char *hch_pipename = NULL;
+    const char *hch_tempname = NULL;
+    Rboolean boo_retvalue = TRUE;
+
+    /* Prepare FIFO filename */
+    if (!uin_pipname_len)
+    {
+        hch_pipename = R_tmpnam("fifo", "\\\\.\\pipe\\");
+    }
+    else
+    {
+        if (strncmp("\\\\.\\pipe\\", con->description, 9) != 0)
+        {
+            uin_pipname_len += strlen("\\\\.\\pipe\\") + 1;
+            hch_pipename = (char *)malloc(uin_pipname_len);
+            if (!hch_pipename)
+                error(_("allocation of fifo name failed"));
+            ZeroMemory(hch_pipename, uin_pipname_len);
+            strcpy_s(hch_pipename, uin_pipname_len, "\\\\.\\pipe\\");
+        }
+        else
+        {
+            hch_pipename = (char *)malloc(uin_pipname_len);
+            if (!hch_pipename)
+                error(_("allocation of fifo name failed"));
+            ZeroMemory(hch_pipename, uin_pipname_len);
+        }
+        hch_tempname = R_ExpandFileName(con->description);
+        strcat_s(hch_pipename, uin_pipname_len, hch_tempname);
+    }
+
+    /* Prepare FIFO open mode */
+    con->canwrite = (con->mode[0] == 'w' || con->mode[0] == 'a');
+    con->canread = !con->canwrite;
+    if (uin_mode_len >= 2 && con->mode[1] == '+')
+        con->canread = TRUE;
+
+    /*
+    ** FIFO using Windows API -> CreateNamedPipe() OR CreateFile()
+    ** http://msdn.microsoft.com/en-us/library/windows/desktop/aa363858(v=vs.85).aspx
+    ** http://msdn.microsoft.com/en-us/library/windows/desktop/aa365150(v=vs.85).aspx
+    */
+    this->hdl_namedpipe = NULL;
+    this->overlapped_write = (LPOVERLAPPED)malloc(sizeof(OVERLAPPED));
+    this->overlapped_write = CreateEventA(NULL, TRUE, TRUE, NULL);
+    if (con->canwrite)
+    {
+        SECURITY_ATTRIBUTES win_namedpipe_secattr = {0};
+        win_namedpipe_secattr.nLength = sizeof(SECURITY_ATTRIBUTES);
+        win_namedpipe_secattr.lpSecurityDescriptor = NULL;
+        win_namedpipe_secattr.bInheritHandle = FALSE;
+
+        this->hdl_namedpipe = CreateNamedPipeA(
+            hch_pipename, (con->canread ? PIPE_ACCESS_DUPLEX : PIPE_ACCESS_OUTBOUND) | FILE_FLAG_OVERLAPPED,
+            PIPE_TYPE_BYTE, PIPE_UNLIMITED_INSTANCES, 0, 0, FILE_FLAG_NO_BUFFERING, &win_namedpipe_secattr);
+        if (this->hdl_namedpipe == INVALID_HANDLE_VALUE)
+        {
+            /*
+            ** If GetLastError() return 231 (All pipe instances are busy) == File
+            ** already exist on Unix/Linux...
+            */
+            if (GetLastError() != 231)
+            {
+                char *hch_err_msg = win_getlasterror_str();
+                warning(_("cannot create fifo '%s', reason '%s'"), hch_pipename, hch_err_msg);
+                free(hch_err_msg);
+                boo_retvalue = FALSE;
+            }
+        }
+    }
+
+    /* Open existing named pipe */
+    if ((boo_retvalue || GetLastError() == 231) && this->hdl_namedpipe <= (HANDLE)(LONG_PTR)0)
+    {
+        DWORD dwo_openmode = 0;
+        if (con->canread)
+            dwo_openmode |= GENERIC_READ;
+        if (con->canwrite)
+            dwo_openmode |= GENERIC_WRITE;
+        this->hdl_namedpipe = CreateFileA(hch_pipename, dwo_openmode, FILE_SHARE_READ | FILE_SHARE_WRITE, NULL,
+                                          OPEN_EXISTING, FILE_ATTRIBUTE_NORMAL | FILE_FLAG_OVERLAPPED, NULL);
+        if (this->hdl_namedpipe == INVALID_HANDLE_VALUE)
+        {
+            char *hch_err_msg = win_getlasterror_str();
+            warning(_("cannot open fifo '%s', reason '%s'"), hch_pipename, hch_err_msg);
+            free(hch_err_msg);
+            boo_retvalue = FALSE;
+        }
+    }
+
+    /* Free malloc-ed variables */
+    free(hch_pipename);
+    if (hch_tempname)
+        free((void *)hch_tempname);
+
+    /* Finalize FIFO configuration (only if FIFO is opened/created) */
+    if (boo_retvalue && this->hdl_namedpipe)
+    {
+        con->isopen = TRUE;
+        con->text = uin_mode_len >= 2 && con->mode[uin_mode_len - 1] == 'b';
+        set_iconv(con);
+        con->save = -1000;
+    }
+
+    /* Done */
+    return boo_retvalue;
+}
+
+static void fifo_close(Rconnection con)
+{
+    Rfifoconn this = con->private;
+    con->isopen = FALSE;
+    con->status = CloseHandle(this->hdl_namedpipe) ? 0 : -1;
+    if (this->overlapped_write)
+        CloseHandle(this->overlapped_write);
+}
+
+static size_t fifo_read(void *ptr, size_t size, size_t nitems, Rconnection con)
+{
+    Rfifoconn this = con->private;
+    size_t read_byte = 0;
+
+    // avoid integer overflow
+    if ((double)size * sizeof(wchar_t) * nitems > UINT_MAX)
+        error(_("too large a block specified"));
+
+    wchar_t *buffer = (wchar_t *)malloc((size * sizeof(wchar_t)) * nitems);
+    if (!buffer)
+        error(_("allocation of fifo buffer failed"));
+    ReadFile(this->hdl_namedpipe, buffer, (size * sizeof(wchar_t)) * nitems, (LPDWORD)&read_byte,
+             this->overlapped_write);
+    wcstombs(ptr, buffer, read_byte / sizeof(wchar_t));
+    free(buffer);
+    return (read_byte / sizeof(wchar_t)) / size;
+}
+
+static size_t fifo_write(const void *ptr, size_t size, size_t nitems, Rconnection con)
+{
+    Rfifoconn this = con->private;
+    size_t written_bytes = 0;
+
+    if (size * sizeof(wchar_t) * nitems > UINT_MAX)
+        error(_("too large a block specified"));
+
+    /* Wait for a client process to connect */
+    ConnectNamedPipe(this->hdl_namedpipe, NULL);
+
+    /* Convert char* to wchar_t* */
+    int str_len = size * nitems;
+    wchar_t *buffer = malloc((str_len + 1) * sizeof(wchar_t));
+    if (!buffer)
+        error(_("allocation of fifo buffer failed"));
+    mbstowcs(buffer, (const char *)ptr, str_len);
+
+    /* Write data */
+    if (WriteFile(this->hdl_namedpipe, buffer, size * sizeof(wchar_t) * nitems, (LPDWORD)&written_bytes, NULL) ==
+            FALSE &&
+        GetLastError() != ERROR_IO_PENDING)
+    {
+        char *hch_err_msg = win_getlasterror_str();
+        warning(_("cannot write FIFO '%s'"), hch_err_msg);
+        free(hch_err_msg);
+    }
+
+    /* Free data malloc-ed by windows_towchar */
+    free(buffer);
+
+    /* Done */
+    return written_bytes / nitems;
+}
+
+static int fifo_fgetc_internal(Rconnection con)
+{
+    Rfifoconn this = con->private;
+    DWORD available_bytes = 0;
+    DWORD read_byte = 0;
+    DWORD len = 1 * sizeof(wchar_t);
+    wchar_t c;
+
+    /* Check available bytes on named pipe */
+    PeekNamedPipe(this->hdl_namedpipe, NULL, 0, NULL, &available_bytes, NULL);
+
+    /* Read char if available bytes > 0, otherwize, return R_EOF */
+    if (available_bytes > 0)
+    {
+        ReadFile(this->hdl_namedpipe, &c, len, &read_byte, NULL);
+        return (read_byte == len) ? (char)c : R_EOF;
+    }
+    return R_EOF;
+}
+
+#endif // WIN32
 
 static Rconnection newfifo(const char *description, const char *mode)
 {
@@ -1081,11 +1315,10 @@ static Rconnection newfifo(const char *description, const char *mode)
     }
     return new;
 }
-#endif
 
 SEXP attribute_hidden do_fifo(SEXP call, SEXP op, SEXP args, SEXP env)
 {
-#if defined(HAVE_MKFIFO) && defined(HAVE_FCNTL_H)
+#if (defined(HAVE_MKFIFO) && defined(HAVE_FCNTL_H)) || defined(WIN32)
     SEXP sfile, sopen, ans, class, enc;
     const char *file, *open;
     int ncon, block;
